--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://images.pexels.com/photos/784632/pexels-photo-784632.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="300px">
     <ul>
         <li><a href="./recipes/sushi.html">Homemade Sushi Rolls</a></li>
         <li><a href="./recipes/noodle.html">Ramen Noodle Chicken Salad</a></li>
